Testing overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@ margin-bottom:20px
 }
 .navbar-default {
 background-color:#fff;
-opacity:0.5;
+opacity:0.7;
+overflow-x: hidden;
 border-color:rgba(34,34,34,.05);
 -webkit-transition:all .35s;
 -moz-transition:all .35s;
@@ -68,7 +69,7 @@ text-transform:uppercase;
 letter-spacing:2px
 }
 .navbar-default .navbar-header .navbar-brand:focus, .navbar-default .navbar-header .navbar-brand:hover {
-color:#fcbd20;
+color:#ffffff;
 font-size: 12px;
 }
 .navbar-default .navbar-header .navbar-toggle {
